service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-boot-app
  name: spring-boot-app-service
  namespace: default
spec:
  ports:
  - nodePort: 32182
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-boot-app-deployment
  sessionAffinity: None
  type: NodePort
