ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: spring-boot-app
  name: spring-boot-app-ingress
spec:
  rules:
    - host: spring-boot-app.1e908dea-7226-44ff-b397-f9e22054893a.k8s.civo.com
      http:
        paths:
          -
            backend:
              service:
                name: spring-boot-app-service
                port:
                  number: 8080
            path: /
            pathType: "Prefix"
